2004-05-29  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "tk" to ALL_LINGUAS.

2004-05-29  Rodney Dawes  <dobey@novell.com>

	* Makefile.am (EXTRA_DIST): Get rid of OrigTree.pm, as new intltool
	versions don't have it
	Add mkinstalldirs here

	* autogen.sh: Add check to copy in mkinstalldirs from gettext
	This is needed for installation to work
	
	* NEWS:
	* configure.in: Bump version to 1.3.2 for release

2004-05-28  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/emoticons/Makefile.am
	* 16x16/stock/emoticons/stock_smiley-1.png
	* 16x16/stock/emoticons/stock_smiley-10.png
	* 16x16/stock/emoticons/stock_smiley-11.png
	* 16x16/stock/emoticons/stock_smiley-12.png
	* 16x16/stock/emoticons/stock_smiley-13.png
	* 16x16/stock/emoticons/stock_smiley-14.png
	* 16x16/stock/emoticons/stock_smiley-15.png
	* 16x16/stock/emoticons/stock_smiley-16.png
	* 16x16/stock/emoticons/stock_smiley-17.png
	* 16x16/stock/emoticons/stock_smiley-18.png
	* 16x16/stock/emoticons/stock_smiley-19.png
	* 16x16/stock/emoticons/stock_smiley-2.png
	* 16x16/stock/emoticons/stock_smiley-20.png
	* 16x16/stock/emoticons/stock_smiley-21.png
	* 16x16/stock/emoticons/stock_smiley-22.png
	* 16x16/stock/emoticons/stock_smiley-23.png
	* 16x16/stock/emoticons/stock_smiley-24.png
	* 16x16/stock/emoticons/stock_smiley-25.png
	* 16x16/stock/emoticons/stock_smiley-26.png
	* 16x16/stock/emoticons/stock_smiley-3.png
	* 16x16/stock/emoticons/stock_smiley-4.png
	* 16x16/stock/emoticons/stock_smiley-5.png
	* 16x16/stock/emoticons/stock_smiley-6.png
	* 16x16/stock/emoticons/stock_smiley-7.png
	* 16x16/stock/emoticons/stock_smiley-8.png
	* 16x16/stock/emoticons/stock_smiley-9.png
	* 16x16/stock/Makefile.am
	* index.theme.in
	* configure.in: Gnome emoticons

	* 24x24/stock/text/Makefile.am
	* 24x24/stock/text/stock_text-monospaced.png
	* 24x24/stock/table/Makefile.am
	* 24x24/stock/table/stock_insert-table.png
	* 24x24/stock/object/Makefile.am
	* 24x24/stock/object/stock_insert-rule.png